[gd_scene load_steps=4 format=3 uid="uid://d2lpiql47hogl"]

[ext_resource type="Script" path="res://Scripts/Vent.gd" id="1_0eky6"]
[ext_resource type="Texture2D" uid="uid://cv3ua4otixn0e" path="res://Assets/icon.svg" id="2_n5yc2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1r7f1"]
size = Vector2(64, 68)

[node name="Vent" type="Node2D"]
script = ExtResource("1_0eky6")

[node name="Entrada" type="Area2D" parent="."]
position = Vector2(-117, -3)

[node name="Sprite2D" type="Sprite2D" parent="Entrada"]
scale = Vector2(0.515625, 0.515625)
texture = ExtResource("2_n5yc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrada"]
shape = SubResource("RectangleShape2D_1r7f1")

[node name="Saida" type="Area2D" parent="."]
position = Vector2(112, -3)

[node name="Sprite2D" type="Sprite2D" parent="Saida"]
scale = Vector2(0.515625, 0.515625)
texture = ExtResource("2_n5yc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Saida"]
shape = SubResource("RectangleShape2D_1r7f1")

[connection signal="body_entered" from="Entrada" to="." method="_on_entrada_body_entered"]
[connection signal="body_exited" from="Entrada" to="." method="_on_entrada_body_exited"]
[connection signal="body_entered" from="Saida" to="." method="_on_saida_body_entered"]
[connection signal="body_exited" from="Saida" to="." method="_on_saida_body_exited"]
